--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,10 +31,11 @@ jobs:
         with:
           registry: ghcr.io
           username: lahmamiahm23
-          password: ${{ secrets.GHCR_PAT }}
+          password: "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"
 
       - name: Push to GHCR
         run: |
           docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest
           docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:${{ github.sha }}
+
 
