--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-﻿name: CI/CD to GHCR
+name: CI/CD to GHCR
 
 on: [push]
 
@@ -10,33 +10,36 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
+      # Récupère le code depuis le repo
       - uses: actions/checkout@v4
 
+      # Installe JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      # Build Maven
       - name: Build with Maven
         run: mvn clean package
 
+      # Build et tag de l'image Docker
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest .
-          docker tag ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:${{ github.sha }}
+          docker build -t ghcr.io/med293475-sketch/spring-boot-k8s:latest .
+          docker tag ghcr.io/med293475-sketch/spring-boot-k8s:latest ghcr.io/med293475-sketch/spring-boot-k8s:${{ github.sha }}
 
+      # Connexion à GHCR avec ton token stocké dans les Secrets GitHub
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: med293475-sketch
-          password: "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"
+          password: ${{ secrets.GHCR_PAT }}
 
+      # Push de l'image Docker
       - name: Push to GHCR
         run: |
-          docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest
-          docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:${{ github.sha }}
-
-
-
+          docker push ghcr.io/med293475-sketch/spring-boot-k8s:latest
+          docker push ghcr.io/med293475-sketch/spring-boot-k8s:${{ github.sha }}
