--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,9 @@
 name: CI/CD to GHCR
 
-on: [push]
+on:
+  push:
+    branches:
+      - main  # ou ta branche principale
 
 permissions:
   contents: read
@@ -10,10 +13,10 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      # Récupère le code depuis le repo
+      # Récupérer le code source
       - uses: actions/checkout@v4
 
-      # Installe JDK 17
+      # Configurer Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -22,24 +25,24 @@ jobs:
 
       # Build Maven
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean package -DskipTests
 
-      # Build et tag de l'image Docker
+      # Construire l'image Docker
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/med293475-sketch/spring-boot-k8s:latest .
-          docker tag ghcr.io/med293475-sketch/spring-boot-k8s:latest ghcr.io/med293475-sketch/spring-boot-k8s:${{ github.sha }}
+          docker build -t ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest .
+          docker tag ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:${{ github.sha }}
 
-      # Connexion à GHCR avec ton token stocké dans les Secrets GitHub
+      # Se connecter à GHCR
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: med293475-sketch
+          username: lahmamiahm23
           password: ${{ secrets.GHCR_PAT }}
 
-      # Push de l'image Docker
-      - name: Push to GHCR
+      # Pousser l'image Docker sur GHCR
+      - name: Push Docker image
         run: |
-          docker push ghcr.io/med293475-sketch/spring-boot-k8s:latest
-          docker push ghcr.io/med293475-sketch/spring-boot-k8s:${{ github.sha }}
+          docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest
+          docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:${{ github.sha }}
