--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,10 +39,11 @@ jobs:
         with:
           registry: ghcr.io
           username: lahmamiahm23
-          password: ${{ secrets.GHCR_PAT }}
+          password: "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"
 
       # Pousser l'image Docker sur GHCR
       - name: Push Docker image
         run: |
           docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest
           docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:${{ github.sha }}
+
