--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,38 +12,39 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    steps:
-      # Récupérer le code source
-      - uses: actions/checkout@v4
 
-      # Configurer Java 17
+    steps:
+      # 1️⃣ Récupération du code
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # 2️⃣ Configuration de Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Build Maven
+      # 3️⃣ Build du projet avec Maven
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      # Construire l'image Docker
+      # 4️⃣ Construction de l'image Docker
       - name: Build Docker image
         run: |
           docker build -t ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest .
           docker tag ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:${{ github.sha }}
 
-      # Se connecter à GHCR
+      # 5️⃣ Connexion à GHCR avec le secret GitHub
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: lahmamiahm23
-          password: "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"
+          password: ${{ secrets.GHCR_PAT }}
 
-      # Pousser l'image Docker sur GHCR
+      # 6️⃣ Push de l'image
       - name: Push Docker image
         run: |
           docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest
           docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:${{ github.sha }}
-
