--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: CI/CD to GHCR
 on:
   push:
     branches:
-      - main  # ou ta branche principale
+      - main
 
 permissions:
   contents: read
@@ -12,30 +12,23 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-      # 1️⃣ Récupération du code
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # 2️⃣ Configuration de Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3️⃣ Build du projet avec Maven
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      # 4️⃣ Construction de l'image Docker
       - name: Build Docker image
         run: |
           docker build -t ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest .
           docker tag ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:${{ github.sha }}
 
-      # 5️⃣ Connexion à GHCR avec le secret GitHub
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
@@ -43,7 +36,6 @@ jobs:
           username: lahmamiahm23
           password: ${{ secrets.GHCR_PAT }}
 
-      # 6️⃣ Push de l'image
       - name: Push Docker image
         run: |
           docker push ghcr.io/lahmamiahm23/spring-boot-k8s-deployment:latest
